--- a/css/index.css
+++ b/css/index.css
@@ -1,136 +1,143 @@
 
-    *{
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
- }
- 
- body{
-  background-color: cornflowerblue;
-  background-size: cover;
- }
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body{
+ background-color: cornflowerblue;
+ background-size: cover;
+}
 
 .box{
-  height: 100vh;
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+ height: 100vh;
+ padding: 20px;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
 }
 
- .structure{
+.structure{
+ width: 100%;
+ width: 50%;
+ background: #fff;
+ border-radius: 6px;
+ padding: 20px;
+ margin: 0 20px;
+ box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.head1, .head2, .head3 {
+  background-color:rgb(4,4,95);
   width: 100%;
-  width: 50%;
-  background: #fff;
-  border-radius: 6px;
+  height: 45px;
+  color: white;
+  text-align: center;
+}
+ 
+ #data{
+  height: 150px;
+  width: 100%;
   padding: 20px;
-  margin: 0 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  font-size: 28px;
+  font-weight: 200;
 }
 
- .head1, .head2, .head3 {
-   background-color:rgb(4,4,95);
-   width: 100%;
-   height: 45px;
-   color: white;
-   text-align: center;
- }
-  
-  #data{
-   height: 200px;
-   width: 100%;
-   padding: 20px;
-   background-color: white;
-   font-size: 23px;
-   font-weight: 200;
- }
- 
- #output{
-   height: 180px;
-   width: 100%;
-   padding: 20px;
-   font-size: 23px;
-   font-weight: 200;
-   background-color: white;
- }
+#output{
+  height: 230px;
+  width: 100%;
+  padding: 20px;
+  font-size: 32px;
+  font-weight: 200;
+  background-color: white;
+}
 
 .structure .topic-text{
-  font-size: 20px;
-  font-weight: 600;
-  color: #3e2093;
+ font-size: 20px;
+ font-weight: 600;
+ color: #3e2093;
 }
 .structure p{
-  font-size: 16px;
+ font-size: 16px;
 }
 .structure .input-box{
-  display: flex;
-  flex-direction: column;
-  height: 80px;
-  width: 100%;
-  margin: 12px 0;
+ display: flex;
+ flex-direction: column;
+ height: 80px;
+ width: 100%;
+ margin: 12px 0;
 }
 .structure .input-box input{
-  height: 60%;
-  width: 100%;
-  border: none;
-  outline: none;
-  font-size: 14px;
-  background: #F0F1F8;
-  border-radius: 6px;
-  padding: 0 16px;
-  resize: none;
+ height: 60%;
+ width: 100%;
+ border: none;
+ outline: none;
+ font-size: 14px;
+ background: #F0F1F8;
+ border-radius: 6px;
+ padding: 0 16px;
+ resize: none;
 }
 
 .structure .input-box select{
-  height: 100%;
-  width: 100%;
-  border: none;
-  outline: none;
-  font-size: 14px;
-  background: #F0F1F8;
-  border-radius: 6px;
-  padding: 8px 16px;
-  resize: none;
+ height: 100%;
+ width: 100%;
+ border: none;
+ outline: none;
+ font-size: 14px;
+ background: #F0F1F8;
+ border-radius: 6px;
+ padding: 8px 16px;
+ resize: none;
 }
 
 .structure .button{
-  display: inline-block;
-  margin-top: 12px;
+ display: inline-block;
+ margin-top: 12px;
 }
 .structure .button input[type="button"]{
-  color: #fff;
-  font-size: 16px;
-  outline: none;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 6px;
-  background: #3e2093;
-  cursor: pointer;
-  transition: all 0.3s ease;
+ color: #fff;
+ font-size: 16px;
+ outline: none;
+ border: none;
+ padding: 8px 16px;
+ border-radius: 6px;
+ background: #3e2093;
+ cursor: pointer;
+ transition: all 0.3s ease;
 }
 .button input[type="button"]:hover{
-  background: #5029bc;
+ background: #5029bc;
 }
 
 .structure .input-box input:focus {
-  outline: 0;
+ outline: 0;
 }
 
 .structure  .input-box.success input, 
 .structure  .input-box.success select{
-  border-style: solid;
-  border-color: #09c372;
+ border-style: solid;
+ border-color: #09c372;
 }
 
 .structure .input-box.error input,
 .structure .input-box.error select{
-  border-style: solid;
-  border-color: #ff3860;
+ border-style: solid;
+ border-color: #ff3860;
 }
 
 .structure .input-box .error {
-  color: #ff3860;
-  font-size: 12px;
-  height: 13px;
+ color: #ff3860;
+ font-size: 12px;
+ height: 13px;
 }
-  
+
+#prediction-image {
+ max-width: 100%;
+ max-height: 150px;
+ margin-top: 10px;
+ display: none;
+}
+ 
